[project]
name = "hypnotica-v4"
version = "0.1.0"
description = "A prototype game"
authors = [
    {name = "Zoléni Kokolo Zassi",email = "zolenikokolozassi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
